# webscraping_adv

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  __main__.py  webscraping.py
app/controllers/: __init__.py  controller.py
app/modules/esaj_tjsp/: cons_1grau.py
app/results/: 0700481-59.2020.8.02.0075_data_2025-02-07-14-24-54.json  0700481-59.2020.8.02.0075_data_2025-02-07-17-33-25.json  1023829-14.2022.8.26.0554_data_2025-02-07-14-21-12.json  1023886-70.2021.8.26.0003_data_2025-02-13-19-02-43.json
app/service/: convertes.py  file_save.py  request_service.py
tests/: test_convertes.py
